invisible hair particles slowing down mesh edits #40057

Closed
opened 2014-05-06 23:20:14 +02:00 by Sir Torx Screwdriver · 11 comments

System Information
windows 8.1 pro
nvidia gtx 670

Blender Version
Broken: (2.70 19e627c)
Worked: not applicable

Short description of error

Entering edit mode on an object with a particle hair system will stop displaying the hair, but there's still a massive slowdown on any edit mode modification done. Disabling the particle system display in the modifier stack will still show only the particle source mesh in edit mode, but moving vertices around is at interactive speed again.

Exact steps for others to reproduce the error
[you can use the provided blend file and increase the number of particles until your viewport starts to feel a bit slower, thats 1m on my system but I've left it low in the file so that it opens quickly and you can turn up the particle count toward your PCs limit yourself]

So here's the issue in detail:

I have 1 million hair particles on a sphere

object mode: tumbling around in the viewport lags a bit

entering edit mode: the 1M hairs are no longer being displayed

now all I have onscreen is ~1k triangles and tumbling around in the viewport now is perfectly stable again.

as soon as I grab a vertex and try moving it around I get a significant slowdown. Apparently the fur is computed in the background, even though it's not being drawn on screen.

Now if you switch off the particle system display in the modifier stack (which will still show only the particle source object in edit mode) >> editing the mesh performs just as editing a 1k tris mesh normally does.

thanks for your time!

**System Information** windows 8.1 pro nvidia gtx 670 **Blender Version** Broken: (2.70 19e627c) Worked: not applicable **Short description of error** Entering edit mode on an object with a particle hair system will stop displaying the hair, but there's still a massive slowdown on any edit mode modification done. Disabling the particle system display in the modifier stack will still show only the particle source mesh in edit mode, but moving vertices around is at interactive speed again. **Exact steps for others to reproduce the error** [you can use the provided blend file and increase the number of particles until your viewport starts to feel a bit slower, thats 1m on my system but I've left it low in the file so that it opens quickly and you can turn up the particle count toward your PCs limit yourself] So here's the issue in detail: I have 1 million hair particles on a sphere object mode: tumbling around in the viewport lags a bit entering edit mode: the 1M hairs are no longer being displayed now all I have onscreen is ~1k triangles and tumbling around in the viewport now is perfectly stable again. as soon as I grab a vertex and try moving it around I get a significant slowdown. Apparently the fur is computed in the background, even though it's not being drawn on screen. Now if you switch off the particle system display in the modifier stack (which will still show only the particle source object in edit mode) >> editing the mesh performs just as editing a 1k tris mesh normally does. thanks for your time!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @particleemitter

Added subscriber: @particleemitter

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

The blendfile is missing. Simply drag and drop it in the comment box.

The blendfile is missing. Simply drag and drop it in the comment box.

hair_particles_editmode-lag.blend

Aha! Thanks for the heads up, the file should be there now

[ another copy of the file on PasteAll, just in case :) http://www.pasteall.org/blend/29112 ]

[hair_particles_editmode-lag.blend](https://archive.blender.org/developer/F88594/hair_particles_editmode-lag.blend) Aha! Thanks for the heads up, the file should be there now [ another copy of the file on PasteAll, just in case :) http://www.pasteall.org/blend/29112 ]

replicated this exact issue on another machine at work today

replicated this exact issue on another machine at work today

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

Particles are being updated for objects in edit mode.. Here's a patch which skips this: http://www.pasteall.org/52126/diff

Seems hair is being properly updated when leaving edit mode, but before commit wouldn't mind having @LukasTonne's eyes on this..

Particles are being updated for objects in edit mode.. Here's a patch which skips this: http://www.pasteall.org/52126/diff Seems hair is being properly updated when leaving edit mode, but before commit wouldn't mind having @LukasTonne's eyes on this..

This issue was referenced by 0ae8ce3ab1

This issue was referenced by 0ae8ce3ab1d8295266c8cda60f3446249b4416ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0ae8ce3ab1.

Closed by commit 0ae8ce3ab1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40057
No description provided.